--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -12,15 +12,15 @@
     justify-content: space-between;
 }
 
-.pokemon-card-header img {
-    width: 15px;
-    height: 15px;
+.pokemon-card-header .favorite {
+    width: 26px;
+    height: 26px;
     cursor: pointer;
 }
 
 .pokemon-card-image {
     width: 220px;
     height: 250px;
-    object-fit: cover;
+    object-fit: contain;
     margin: 50px 0;
 }
